[package]
name = "jartight-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"